feat: 支持配置 gitlab 认证信息和拉取仓库
