# backend/src/main/kotlin/com/anonysoul/weaver/repo/CredentialType.kt
@@ -1,5 +1,0 @@
-package com.anonysoul.weaver.repo
-
-enum class CredentialType {
-    HTTPS_PAT
-}
